# manim-sandbox

./: .gitignore  README.md  pyproject.toml
config/: manim.cfg
manim_sandbox/: cli.py
manim_sandbox/common/: __init__.py  compound_objects.py
manim_sandbox/spacetime/relativity/: inertial_ref_frames.py  photon_clock.py  speed_of_light.py  time_dilation.py
src/: cli.py
src/spacetime/: example.py  intro.py
src/spacetime/relativity/: inertial_ref_frames.py  photon_clock.py
