[project]
name = "manim-sandbox"
version = "0.1.0"
description = "A sandbox for playing around with Manim."
authors = [
    { name = "Philip Linden", email = "lindenphilipj@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "manim>=0.18.1",
]

[dependency-groups]
dev = [
    "click>=8.1.8",
]
