[project]
name = "manim-sandbox"
version = "0.1.0"
description = "A sandbox for playing around with Manim."
authors = [
    { name = "Philip Linden", email = "lindenphilipj@gmail.com" }
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.1.8",
    "manim>=0.18.1",
]

[project.scripts]
mmake = "src.cli:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]

[tool.ruff]
ignore = ["F403", "F405"]

[dependency-groups]
dev = [
    "click>=8.1.8",
]
